# python-project-52

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  render.yaml  requerments.txt  requirements.txt  setup.cfg
.github/workflows/: main-check.yml
docker/: start.sh
staticfiles/: staticfiles.json
task_manager/: forms.py  meta.py  mixins.py  settings.py  settings_dev.py  tests.py  urls.py  views.py
task_manager/fixtures/: test-label.json  test-status.json  test-tasks.json  test-user.json
task_manager/labels/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_status_date_of_creation.py  0003_alter_status_date_of_creation.py
task_manager/tasks/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_alter_task_author_alter_task_description_and_more.py  0003_alter_task_labels.py  0004_alter_task_executor.py  0005_alter_task_author_alter_task_status.py  0006_alter_task_author_alter_task_executor.py
task_manager/templates/: base.html  delete.html  form.html  index.html  layout.html  login.html
task_manager/templates/labels/: changing_base.html  create.html  delete.html  index.html  update.html
task_manager/templates/statuses/: create.html  (+3 more)
task_manager/templatetags/: task_manager_tags.py
task_manager/users/: forms.py  models.py  tests.py  urls.py  views.py
(+23 files in other folders)
