[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Task manager project"
authors = ["NikolayZemelko <zemelko1989@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.3"
python-dotenv = "^1.0.0"
dj-database-url = "^2.0.0"
psycopg2-binary = "^2.9.6"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
